--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Favourite Frouits</h1>
+		<h1>Favourite Fruits</h1>
 		<div class="col-lg-3 col-md-4" id="Man">
 			<h2>Mango</h2>
 			<p>A mango is a juicy stone fruit produced from numerous species of tropical trees belonging to the flowering plant genus Mangifera, cultivated mostly for their edible fruit. Most of these species are found in nature as wild mangoes.</p> 
